<?xml version="1.0"?>
<package>
  <name>phidgets</name>
  <version>0.0.0</version>
  <description>Phidgest interface kit package</description>
  <maintainer email="seungkook.yun@gmail.com">Sean Seungkook Yun</maintainer>
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pkg-config</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>pkg-config</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
